# solpython

./: .gas-snapshot  .gitignore  ARCHITECTURE.md  BACKEND_LIMITATIONS.md  CLAUDE.md  FIXES.md  GOAL.md  ISA.md  LICENSE  MANIFEST.in  PROGRESS.md  README.md  REPORT.md  foundry.toml  pyproject.toml
examples/: factorial.py  fib.py  fizzbuzz.py  hello.py  loop.py
pysol/: __init__.py  build.py  executor.py
pysol/cli/: main.py
solpython.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: PythonCompiler.sol
src/bootstrap/: lexer.py  mini_lexer.py
src/gc/: RefCounter.sol
src/libraries/: StringLib.sol
src/optimizer/: ConstantFolder.sol
src/phases/: CodeGenerator.sol  Lexer.sol  Parser.sol  SemanticAnalyzer.sol  SolidityBackend.sol  VM.sol  YulBackend.sol
src/types/: ASTNode.sol  Token.sol  TypeInfo.sol
src/vfs/: VFS.sol
test/: AugAssign.t.sol  Bootstrap.t.sol  ChainedCmp.t.sol  Class.t.sol  CodeGenerator.t.sol  ConstantFolder.t.sol  DebugTest.t.sol  DefaultParams.t.sol  Demo.t.sol  Dict.t.sol  DictMethods.t.sol  DictStringKeys.t.sol  E2E.t.sol  EnumerateZip.t.sol  ErrorMessages.t.sol  Exception.t.sol  FString.t.sol  Float.t.sol  ForLoop.t.sol  GC.t.sol  GlobalNonlocal.t.sol  Import.t.sol  Integration.t.sol  IsinstanceType.t.sol  KeywordArgs.t.sol  Lexer.t.sol  LoopElse.t.sol  MapFilter.t.sol  NegativeIndex.t.sol  NoneSafety.t.sol  Parser.t.sol  SemanticAnalyzer.t.sol  Set.t.sol  SolidityBackend.t.sol  SortedReversed.t.sol  StringMethods.t.sol  TempSlot.t.sol  Ternary.t.sol  Tuple.t.sol  TypeClassify.t.sol  (+7 more)
(+2 files in other folders)
